# GitLite

./: CMakeLists.txt  INFO&FRAMES.md  README.md  Requirements.md  main.cpp  mk.sh
include/: Def.hpp  ObjectDataBase.hpp  Objects.hpp  RefManager.hpp  RemoteManager.hpp  Repository.hpp  Utils.h  index.hpp
pri_test/.gitlite/: index
pri_test/.gitlite/refs/heads/: master  other
src/: ObjectDataBase.cpp  Objects.cpp  RefManager.cpp  RemoteManager.cpp  Repository.cpp  Utils.cpp  index.cpp
test/.gitlite/: index
test/.gitlite/refs/heads/: master
testing/: out.txt
